[package]
name = "trackk"
authors = ["mivort"]
edition = "2024"
license = "GPL-2.0-only"
version = "0.4.14"

[[bin]]
name = "trk"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.100"
clap = "4.5.48"
clap_complete = "4.5.58"
clap_derive = "4.5.47"
dirs = "6.0.0"
fern = "0.7.1"
formatx = "0.2.4"
log = "0.4.28"
logos = "0.15.1"
memchr = "2.7.5"
mimalloc = "0.1.48"
minijinja = "2.12.0"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.11.2"
serde = "1.0.226"
serde_derive = "1.0.226"
serde_json = "1.0.145"
serde_json5 = "0.2.1"
tempfile = "3.23.0"
terminal_size = "0.4.3"
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["macros", "local-offset", "parsing", "formatting"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
unwrap_or = "1.0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
vte = "0.15.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
testdir = "0.9.3"

[profile.release]
lto = true
