[package]
name = "trackk"
authors = ["mivort"]
edition = "2024"
license = "GPL-2.0-only"
version = "0.4.14"

[[bin]]
name = "trk"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.13"
anyhow = "1.0.100"
clap = "4.5.51"
clap_complete = "4.5.60"
clap_derive = "4.5.49"
dirs = "6.0.0"
fern = "0.7.1"
formatx = "0.2.4" # TODO: P2: check if formatx dependency is still needed
log = "0.4.28"
logos = "0.15.1"
memchr = "2.7.6"
mimalloc = "0.1.48"
minijinja = "2.12.0"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.12.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
terminal_size = "0.4.3"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["macros", "local-offset", "parsing", "formatting"] }
toml = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
unwrap_or = "1.0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
vte = "0.15.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
testdir = "0.9.3"

[profile.release]
lto = true
